20465 - Programing in C Lab/Project/Maman14-mac/.metadata/.plugins/org.eclipse.cdt.ui/Maman14.build.log
13:46:32 **** Incremental Build of configuration Debug for project Maman14 ****
make all 
Building file: ../src/Maman14-mac.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Maman14-mac.d" -MT"src/Maman14-mac.d" -o "src/Maman14-mac.o" "../src/Maman14-mac.c"
In file included from ../src/Maman14-mac.c:11:0:
../src/utils.h:143:1: warning: parameter names (without types) in function declaration
 void print_symbol_list(symbol_ptr);
 ^~~~
Finished building: ../src/Maman14-mac.c
 
Building file: ../src/first_scan.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/first_scan.d" -MT"src/first_scan.d" -o "src/first_scan.o" "../src/first_scan.c"
In file included from ../src/first_scan.h:8:0,
                 from ../src/first_scan.c:8:
../src/utils.h:143:1: warning: parameter names (without types) in function declaration
 void print_symbol_list(symbol_ptr);
 ^~~~
../src/first_scan.c: In function ‘first_scan’:
../src/first_scan.c:51:7: warning: variable ‘error_found’ set but not used [-Wunused-but-set-variable]
  Bool error_found=FALSE;
       ^~~~~~~~~~~
Finished building: ../src/first_scan.c
 
Building file: ../src/second_scan.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/second_scan.d" -MT"src/second_scan.d" -o "src/second_scan.o" "../src/second_scan.c"
In file included from ../src/second_scan.h:11:0,
                 from ../src/second_scan.c:8:
../src/utils.h:143:1: warning: parameter names (without types) in function declaration
 void print_symbol_list(symbol_ptr);
 ^~~~
../src/second_scan.c:11:54: error: unknown type name ‘symbol_ptr’
 Bool second_scan (bodyArray parsed, int parsed_size, symbol_ptr symbols){
                                                      ^~~~~~~~~~
make: *** [src/second_scan.o] Error 1
src/subdir.mk:36: recipe for target 'src/second_scan.o' failed

13:46:33 Build Finished (took 403ms)

